--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ jdk:
   - oraclejdk7
   - openjdk7
   - openjdk6
+script: "if [[ \"`java -version`\" =~ 'java version \"1\\.6\\..*\"' ]]; then sbt ++$TRAVIS_SCALA_VERSION Tracer-Stack-J6/test; else sbt ++$TRAVIS_SCALA_VERSION test; fi"
 notifications:
   email:
     - secure: "bnZOTWy67FbOJXZ6Luvrez2zgcitYxuUeyr6apFX9hSCTAJ8HrcWwAxfV/FW/L/W06DqzS9LbJ2COi4ErMmjHS2Dj5oeEnmWhF/H7g/IijL1E++n//C8u8g3buf04ac1sG126Wc7YcyJfGohUBAPuZ7Jb6zwiLLH8lt0jTpr0SQ="
